2011-06-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	* Glasses/ZGlass.h:
	* Glasses/ZQueen.h:
	* GledView/FTW.cxx:
	Fix some compilation warnings with gcc-4.6.

2011-06-19  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/ZRCStone.cxx:
	* Stones/ZRCStone.h:
	Removed files - replace with less confusing SRefCounted.

	* Stones/SRefCounted.cxx:
	* Stones/SRefCounted.h:
	Added files - replace ZRCStone. Also provide verison without
	virtual functions SRefCountedNV.

	* catalog.patch:
	Register also the SRefCountedNV.

2011-05-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* Gled/GCRC32.cxx:
	* Gled/GCRC32.h:
	New helper class for doing CRC-32.

2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	Increase wait time in Accept from 20s to 60s.
	This was too small when running with google heap checker.

2010-12-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac fixes.

	* GledView/MCW_View.cxx:
	Add include for mac.

	* Pupils/Pupil.cxx:
	Fix initialization of GLEW for mac.

2010-12-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Add A_Rnr::HandlePick() function -- it can be called via a
	context-menu entry in Pupil.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Extend pick_menu_data to also hold name-stack list and name-stack
	iterator for given entry.

	Add pick-menu entry "Deliver Event" that triggers callback into
	A_Rnr::HandlePick() (new function, see below).

	Move the struct and supporting functions into Pupil (was in
	unnamed namespace before).

	* RnrBase/A_Rnr.h:
	Add a new virtual function:
	  virtual void HandlePick(RnrDriver* rd, lNSE_t& ns, lNSE_i nsi) {}

	* Rnr/GL/WGlDirectory_GL_Rnr.cxx:
	* Rnr/GL/WGlDirectory_GL_Rnr.h:
	As a demonstration, implement HandlePick().

2010-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Simplify Saturn -> Eye communication.

	Drop special TextMessage class, use special rays from EyeInfo instead.
	Eye needs to look for them, they are forwarded to
	  virtual void AbsorbEyeInfoRay(Ray& ray);